1.新增trigger模块用于控制配方合成和执行动作;2.修复script模块未重新包装列表导致所有已编译的脚本内容都一样的bug